@@ -71,6 +71,12 @@
 			<code>org.eclipse.sirius.ui</code>
 		</h4>
 		<ul>
+			<li><span class="label label-info">MOVED</span> The classes 
+				<code>org.eclipse.sirius.ui.business.api.action.RefreshActionListenerRegistry</code> and 
+				<code>org.eclipse.sirius.ui.business.api.action.IRefreshActionListener</code> have been moved out of the Sirius UI bundle to the Sirius bundle, they are now known as 
+				<code>org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry</code> and 
+				<code>org.eclipse.sirius.business.api.action.IRefreshActionListener</code>.
+			</li>
 			<li><span class="label label-danger">Removed</span> The constant 
 				<code>IMAGES_RESOURCE_NAME</code> in 
 				<code>org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector</code> has been removed since it was not used anymore.
